--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-summernote": "~0.3.1",
-    "angular-local-storage": "~0.1.5"
+    "angular-local-storage": "~0.1.5",
+    "angular-ui-utils": "~0.2.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
