--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "lodash": "~2.4.1",
     "angular-summernote": "~0.3.1",
     "angular-local-storage": "~0.1.5",
-    "angular-ui-utils": "~0.2.1"
+    "angular-ui-utils": "~0.2.1",
+    "ng-file-upload": "~3.0.4",
+    "ng-file-upload-shim": "~3.0.4"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
